--- a/src/app.css
+++ b/src/app.css
@@ -4,28 +4,21 @@
 
 @layer base {
 	@font-face {
-		font-family: 'NespressoLucas';
-		src: url('/fonts/nespressolucas-regular-webfont.woff2') format('woff2'),
-			url('/fonts/nespressolucas-regular-webfont.woff') format('woff');
+		font-family: 'basis_grotesque_arabic_pro';
+		src: url('/fonts/basisgrotesquearabicpro-regular-webfont.woff2') format('woff2'),
+			url('/fonts/basisgrotesquearabicpro-regular-webfont.woff') format('woff');
 		font-weight: normal;
 		font-style: normal;
 	}
 	@font-face {
-		font-family: 'NespressoLucas';
-		src: url('/fonts/nespressolucas-semibd-webfont.woff2') format('woff2'),
-			url('/fonts/nespressolucas-semibd-webfont.woff') format('woff');
-		font-weight: 600;
-		font-style: normal;
-	}
-	@font-face {
-		font-family: 'NespressoLucas';
-		src: url('/fonts/nespressolucas-xtrabd-webfont.woff2') format('woff2'),
-			url('/fonts/nespressolucas-xtrabd-webfont.woff') format('woff');
-		font-weight: 800;
+		font-family: 'basis_grotesque_arabic_pro';
+		src: url('/fonts/basisgrotesquearabicpro-medium-webfont.woff2') format('woff2'),
+			url('/fonts/basisgrotesquearabicpro-medium-webfont.woff') format('woff');
+		font-weight: 500;
 		font-style: normal;
 	}
 
 	html {
-		@apply bg-parchment font-base text-black max-lg:text-[10px] lg:text-[8px] 2xl:text-[10px];
+		@apply bg-white font-base text-[10px] text-shark;
 	}
 }
