--- a/src/app.css
+++ b/src/app.css
@@ -32,7 +32,7 @@
 
 @layer components {
 	.content-text h3 {
-		@apply font-medium text-[18px] -tracking-[0.03em];
+		@apply text-[18px] font-medium -tracking-[0.03em];
 	}
 	.content-text h3 + * {
 		@apply mt-[24px];
