--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,7 @@
 		font-family: 'basis_grotesque_arabic_pro';
 		src: url('/fonts/basisgrotesquearabicpro-regular-webfont.woff2') format('woff2'),
 			url('/fonts/basisgrotesquearabicpro-regular-webfont.woff') format('woff');
-		font-weight: normal;
+		font-weight: 400;
 		font-style: normal;
 	}
 	@font-face {
