--- a/src/app.css
+++ b/src/app.css
@@ -25,6 +25,28 @@
 		font-style: normal;
 	}
 
+	@font-face {
+		font-family: 'champ';
+		src: url('/fonts/champ-regular.woff2') format('woff2'),
+			url('/fonts/champ-regular.woff') format('woff');
+		font-weight: 400;
+		font-style: normal;
+	}
+	@font-face {
+		font-family: 'champ';
+		src: url('/fonts/champ-light.woff2') format('woff2'),
+			url('/fonts/champ-light.woff') format('woff');
+		font-weight: 300;
+		font-style: normal;
+	}
+	@font-face {
+		font-family: 'champ';
+		src: url('/fonts/champ-black.woff2') format('woff2'),
+			url('/fonts/champ-black.woff') format('woff');
+		font-weight: 900;
+		font-style: normal;
+	}
+
 	html {
 		@apply bg-white font-base text-[10px] text-shark;
 	}
@@ -64,5 +86,8 @@
 	}
 	.content-text a {
 		@apply underline;
+	}
+	.content-text img {
+		@apply rounded-[2.2rem] overflow-hidden;
 	}
 }
